Bug 406090 - breeze dark: dialog related to executable files shown by Dolphin has barely visible icon
Summary: breeze dark: dialog related to executable files shown by Dolphin has barely v...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: git master
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-31 16:53 UTC by Patrick Silva
Modified: 2019-03-31 19:35 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.57
Sentry Crash Report:


Attachments
screenshot (16.75 KB, image/png)
2019-03-31 16:53 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2019-03-31 16:53:15 UTC
Created attachment 119183 [details]
screenshot

SUMMARY
As we can see in my screenshot, the icon of "Execute" button is barely visible

EXPECTED RESULT
Icon of "Execute" button has better visibility.

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.15.80
KDE Frameworks Version: 5.57.0
Qt Version: 5.12.0
Comment 1 Nate Graham 2019-03-31 19:13:14 UTC
Not actually an icon problem; it's just using inappropriate icons. Here's a patch: https://phabricator.kde.org/D20147
Comment 2 Nate Graham 2019-03-31 19:35:50 UTC
Git commit 89557a218d7b9fa26a9ed6c9dfca5fe903bf928f by Nate Graham.
Committed on 31/03/2019 at 19:17.
Pushed by ngraham into branch 'master'.

Improve executable dialog buttons' icons

Summary:
The buttons were using mimetype icons, which don't change their colors to reflect the theme, and aren't designed for display at those sizes inside buttons.
FIXED-IN: 5.57

Test Plan:
Before, light: {F6739736, size=full}
After, light: {F6739737, size=full}
Before, dark: {F6739744, size=full}
After, dark: {F6739746, size=full}

Reviewers: #vdg, GB_2, ndavis

Reviewed By: #vdg, GB_2, ndavis

Subscribers: ndavis, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D20147

M  +2    -2    src/widgets/executablefileopendialog.cpp

https://commits.kde.org/kio/89557a218d7b9fa26a9ed6c9dfca5fe903bf928f