Improve executable dialog buttons' icons

Summary:
The buttons were using mimetype icons, which don't change their colors to reflect the theme, and aren't designed for display at those sizes inside buttons.

BUG: 406090
FIXED-IN: 5.57

Test Plan:
Before, light: {F6739736, size=full}
After, light: {F6739737, size=full}
Before, dark: {F6739744, size=full}
After, dark: {F6739746, size=full}

Reviewers: #vdg, GB_2, ndavis

Reviewed By: #vdg, GB_2, ndavis

Subscribers: ndavis, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D20147